# dpfp-cli-test

./: .gitignore  CMakeLists.txt  main.cpp
sdk/lib/: DPFPApi.lib  DPFpUI.lib  dpHFtrEx.lib  dpHMatch.lib
